--- a/style.css
+++ b/style.css
@@ -641,7 +641,7 @@ span {
 
 @media (max-width: 1100px) {
   .home .profession-container .profession-box {
-    right: -15%;
+    right: -25%;
   }
 
   .home-img img {
@@ -655,19 +655,19 @@ span {
   }
 
   section {
-    padding: 10rem 3% 2rem;
+    padding: 20rem 10% 2rem;
   }
 
   .home .profession-container .profession-box {
-    right: -20%;
+    right: -25%;
   }
 
   .home .profession-container .overlay {
-    right: -12%;
+    right: -25%;
   }
 
   .home-img img {
-    max-width: 400px;
+    max-width: 450px;
   }
 }
 
@@ -719,6 +719,13 @@ span {
 @media (max-width: 879px) {
   .portfolio .portfolio-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .project-box img{
+    margin-left: auto;
+    margin-right: auto;
+   align-items: center;
+   justify-content: center;
+   display: flex;
   }
 }
 
@@ -929,7 +936,7 @@ span {
 
 @media (max-width: 365px) {
   .about-img img {
-    width: 90vw;
+    width: 100vw;
   }
 }
 
