--- a/style.css
+++ b/style.css
@@ -645,7 +645,7 @@ span {
   }
 
   .home-img img {
-    max-width: 420px;
+    max-width: 500px;
   }
 }
 
@@ -686,11 +686,11 @@ span {
   }
 
   .home .profession-container .profession-box {
-    right: -35%;
+    right: -10%;
   }
 
   .home .profession-container .overlay {
-    right: -30%;
+    right: -10%;
   }
 
   .home-img img {
@@ -721,6 +721,8 @@ span {
     grid-template-columns: repeat(2, 1fr);
   }
   .project-box img{
+    width: 50%;
+    height: 50%;
     margin-left: auto;
     margin-right: auto;
    align-items: center;
